# jfml-di

./: CMakeLists.txt
src/: di.h  main.cpp
tests/: ditest.cpp
